# DiscordTwitchNotify

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
.github/: release.yml
.github/workflows/: rust-check.yml
src/: commands.rs  main.rs  store.rs  twitch.rs
src/twitch/: websocket.rs
