[package]
name = "twitch-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
flume = "0.11.1"
futures = "0.3.31"
poise = "0.6.1"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = "1.43.0"
tokio-tungstenite = "0.21.0"
twitch_api = { version = "0.7.0-rc.8", features = ["eventsub", "helix", "reqwest"] }
url = "2.5.4"
